# opimon

./: .gitignore  README.md  main.py  pyproject.toml
data/: stopwords.txt
data/samples/: weibo_search_sample.json  zhihu_search_sample.json
opimon/: __init__.py  __main__.py  cli.py  models.py  utils.py
opimon/crawler/: __init__.py  base.py  weibo.py  zhihu.py
opimon/nlp/: __init__.py  segmenter.py  sentiment.py
opimon/visualize/: __init__.py  wordcloud.py
tests/: conftest.py  test_models.py  test_segmenter.py  test_sentiment.py  test_visualize.py  test_weibo_crawler.py  test_zhihu_crawler.py
